--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
       <nav>
         <h1>Kameron's Spectacular Website</h1>
         <ul id="nav-ul">
-         <li class="nav-ul">
+         <li class="nav-li">
           <a href="index.html"> Home </a>
          </li>
-         <li class="nav-ul">
+         <li class="nav-li">
           <a href="portfolio.html">Portfolio</a>
          </li>
         </ul>
       </nav>
       <main>
         <!-- Sidebar Section -->
-        <div class="Sidebar">
+        <div class="sidebar">
             <img class="sidebar-img" src="https://img.mlbstatic.com/mlb-images/image/private/t_16x9/t_w1536/mlb/crbela7xbocusesq8f8v.jpg">
         </div>
         <!-- Content Section -->
-        <div id="all-contents"class="Content">
+        <div id="all-contents"class="content">
           <h2>Kameron Walston</h2>
           <p>Student at Covington High School</p>
           <!-- Interests section -->
