--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -9,7 +9,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(255, 0, 0);
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
@@ -18,6 +18,7 @@
 			top: 100px;
 			/* Change me! */
 			left: 650px;
+			border-radius: 5cm;
 		}
 
 		.board {
