--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <body>
     <div>
       <nav>
-        <h1>Kameron's Spectacular Website</h1>
+        <h1> Kameron's Website</h1>
         <ul id="nav-ul">
          <li class="nav-li">
           <a href="index.html"> Home </a>
          </li>
          <li class="nav-li">
           <a href="portfolio.html">Portfolio</a>
+          <li class="nav-li">
+            <a href="images.html">image</a>
          </li>
         </ul>
       </nav>
@@ -23,7 +25,7 @@
             <img class="sidebar-img" src="https://img.mlbstatic.com/mlb-images/image/private/t_16x9/t_w1536/mlb/crbela7xbocusesq8f8v.jpg">
         </div>
         <!-- Content Section -->
-        <div id="all-contents"class="content">
+        <div  id="textuh" class="content">
           <h2>Kameron Walston</h2>
           <p>Student at Covington High School</p>
           <!-- Interests section -->
