--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,8 @@
                     </li>
                     <li class="nav-li">
                         <a class="nav-a" href="portfolio.html">Portfolio</a>
+                        <li class="nav-li">
+                            <a class="nav-a" href="images.html">Image</a>
                     </li>
                 </ul>
             </nav>
